# Discord-music-bot

./: Cargo.toml  Dockerfile  README.md  example_config.json
src/: main.rs
src/commands/: current.rs  deployment.rs  loop_queue.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  shuffle.rs  skip.rs  stop.rs
src/config/: mod.rs
src/handlers/: mod.rs  ready_handler.rs  song_end_handler.rs  song_start_handler.rs
src/structs/: mod.rs
src/utils/: common_utils.rs  mod.rs  regex_utils.rs  serenity_utils.rs
