[package]
name = "discord_music_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiopus = { version = "0.3.0-rc.0" }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.12.2", features = [
    "client",
    "framework",
    "standard_framework",
    "voice",
    "cache"
] }
songbird = { version = "0.4", features = ["builtin-queue", "serenity"] }
poise = "0.6.1"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["fmt", "env-filter", "std"]}
tracing-futures = "0.2.5"
tracing-appender = "0.2.3"
symphonia = {version="0.5.4", features = ["all"]}
regex = "1.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"